2005-06-20  lav

	* keymapdf.cc: add rxvt codes; use shifted terminfo codes as block
	  marking actions (reflecting new trend in terminfo).

2005-05-31  lav

	* kern.cc: (InsertBlock) fix line numbering of CurrentPos,
	  (ReplaceBlock) fix column numbering for replaced wide chars.
	* mb.cc, mb.h: add validity flag WCharValid, fixed compilation
	  without wide chars.
	* screen.cc: don't reassign ScreenTop each time.
	* textpoin.cc: (FindLineCol) fixed a nasty bug; little optimization.
	* user.cc: (UserReplaceChar) fixed for wide chars.

2005-05-01  lav

	* screen.cc: fix shadowing of last char on lines longer than screen
	  width for wide chars.

2005-04-26  lav

	* window.h: use ACS instead of WACS when not in mb_mode (for some
	  reason WACS are output without acs mode - ncurses bug?).

2005-04-19  lav

	* file.cc, menu.cc, menu1.cc, screen.cc, window.cc, window.h:
	  (PutACS) new macro; use it; use WACS_* when in mb_mode.
	* format.cc: fixed handling of inter-paragraph blank lines.

2005-04-08  lav

	* block.cc: fix tolower/toupper/exchange for multibyte chars.
	* screen.cc: skip screen update up to 80 chars, or when line changes.
	* loadsave.cc: add includes for freebsd.
	* mb.cc, mb.h: add ReplaceWCharMove function.

2005-03-23  lav

	* block.cc: use Space function.

2005-03-13  lav

	* user.cc: fix CopyFromDown/Up for wide chars.
	* about.cc: update copyright.
	* format.cc: fix formatting for wide chars.
	* inline.cc: (Space, SpaceLeft) new functions.
	* mb.cc, mb.h: (WCharLeft, WCharLeftAt) new functions; cache wc to
	  reduce mbtowc calls.

2005-01-28  lav

	* chset.cc: (set_chset_no8bit) new function.
	* undo.cc, undo.h: don't glue changes together after a pause.

2005-01-04  lav

	* chset.cc, screen.cc: better check for wc printability; don't use
	  mvaddchnstr in cursesw - it's broken.

2004-12-30  lav

	* getch.cc: workaround KEY_F definition from linux/keyboard.h
	* window.cc: add code for displaying invalid wchars.

2004-12-22  lav
