@@ -2,6 +2,7 @@
 
 	* keymapdf.cc: add rxvt codes; use shifted terminfo codes as block
 	  marking actions (reflecting new trend in terminfo).
+	* edit.cc, user.cc, user.h: add history for shell and pipe commands.
 
 2005-05-31  lav
 
